# easy-hotel

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_schema_inicial.py
backend/app/: main.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/routes/: __init__.py  auth.py  hospedes.py  pagamentos.py  perfis.py  quartos.py  relatorios.py  reservas.py  usuarios.py
backend/app/core/: config.py  security.py  validators.py
backend/app/database/: seed.py
backend/app/models/: __init__.py  estadia.py  hospede.py  metodo_pagamento.py  mixins.py  pagamento.py  perfil.py  quarto.py  reserva.py  status_quarto.py  tipo_quarto.py  usuario.py
backend/app/repositories/: __init__.py  estadia_repository.py  hospede_repository.py  pagamento_repository.py  perfil_repository.py  quarto_repository.py  relatorio_repository.py  reserva_repository.py  usuario_repository.py
backend/app/schemas/: __init__.py  auth.py  estadia.py  hospede.py  pagamento.py  perfil.py  quarto.py  relatorio.py  reserva.py  usuario.py
backend/app/services/: __init__.py  auth_service.py  hospede_service.py  pagamento_service.py  quarto_service.py  relatorio_service.py  reserva_service.py  usuario_service.py
backend/tests/: conftest.py  test_auth.py  test_estadias_pagamentos_relatorios.py  test_health.py  test_hospedes_quartos_reservas.py
docs/: api.md  arquitetura.md  banco-de-dados.md  regras-de-negocio.md
frontend/: eslint.config.js  index.html  package.json  (+1 more)
(+38 files in other folders)
